--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
 		"next-seo": "^4.28.1",
 		"react-cookie": "^4.1.1",
 		"react-icons": "^4.3.1",
-		"react-responsive-carousel": "^3.2.22",
+		"react-slick": "^0.28.1",
+		"slick-carousel": "^1.8.1",
 		"styled-system": "^5.1.5",
 		"ts-jest": "^27.1.3",
 		"typescript": "4.5.4"
