--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
 	},
 	"dependencies": {
 		"jest": "^27.5.1",
-		"next": "12.0.7",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
+		"next": "^12.1.0",
+		"react": "^18.0.0-rc.0",
+		"react-dom": "^18.0.0-rc.0",
 		"react-intersection-observer": "^8.33.1",
 		"react-query": "^3.34.7"
 	},
