--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"react": "^18.0.0-rc.0",
 		"react-dom": "^18.0.0-rc.0",
 		"react-intersection-observer": "^8.33.1",
-		"react-query": "^3.34.7"
+		"react-query": "^3.34.7",
+		"zustand": "^3.7.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.16.7",
@@ -38,6 +39,7 @@
 		"dotenv-webpack": "^7.0.3",
 		"eslint": "8.6.0",
 		"eslint-config-next": "12.0.7",
+		"next-auth": "^4.2.1",
 		"next-seo": "^4.28.1",
 		"react-cookie": "^4.1.1",
 		"react-icons": "^4.3.1",
