--- a/package.json
+++ b/package.json
@@ -29,16 +29,22 @@
 		"@emotion/styled": "^11.3.0",
 		"@loadable/babel-plugin": "^5.13.2",
 		"@loadable/component": "^5.15.0",
+		"@nomiclabs/hardhat-ethers": "^2.0.0",
+		"@nomiclabs/hardhat-waffle": "^2.0.0",
 		"@types/jest": "^27.4.0",
 		"@types/loadable__component": "^5.13.4",
 		"@types/node": "17.0.7",
 		"@types/react": "17.0.38",
 		"@types/styled-system": "^5.1.15",
 		"axios": "^0.24.0",
+		"chai": "^4.2.0",
 		"dotenv": "^10.0.0",
 		"dotenv-webpack": "^7.0.3",
 		"eslint": "8.6.0",
 		"eslint-config-next": "12.0.7",
+		"ethereum-waffle": "^3.0.0",
+		"ethers": "^5.0.0",
+		"hardhat": "^2.9.1",
 		"next-auth": "^4.2.1",
 		"next-seo": "^4.28.1",
 		"react-cookie": "^4.1.1",
