--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@nomiclabs/hardhat-waffle": "^2.0.0",
 		"@types/jest": "^27.4.0",
 		"@types/loadable__component": "^5.13.4",
+		"@openzeppelin/contracts": "^4.5.0",
 		"@types/node": "17.0.7",
 		"@types/react": "17.0.38",
 		"@types/styled-system": "^5.1.15",
