--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "my-app",
 	"private": true,
 	"scripts": {
-		"dev": "next dev -p 3000",
+		"dev": "next dev -p 8080",
 		"build": "next build",
 		"start": "next start -p 8080",
 		"lint": "next lint",
@@ -17,7 +17,8 @@
 		"react-intersection-observer": "^8.33.1",
 		"react-query": "^3.34.7",
 		"web3modal": "^1.9.5",
-		"zustand": "^3.7.1"
+		"zustand": "^3.7.1",
+		"@walletconnect/web3-provider": "^1.7.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.16.7",
