--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@walletconnect/web3-provider": "^1.7.1",
 		"ipfs-http-client": "^56.0.1",
 		"jest": "^27.5.1",
 		"next": "^12.1.0",
@@ -16,9 +17,9 @@
 		"react-dom": "^18.0.0-rc.0",
 		"react-intersection-observer": "^8.33.1",
 		"react-query": "^3.34.7",
+		"react-responsive-carousel": "^3.2.23",
 		"web3modal": "^1.9.5",
-		"zustand": "^3.7.1",
-		"@walletconnect/web3-provider": "^1.7.1"
+		"zustand": "^3.7.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.16.7",
@@ -53,8 +54,6 @@
 		"next-seo": "^4.28.1",
 		"react-cookie": "^4.1.1",
 		"react-icons": "^4.3.1",
-		"react-slick": "^0.28.1",
-		"slick-carousel": "^1.8.1",
 		"styled-system": "^5.1.5",
 		"ts-jest": "^27.1.3",
 		"typescript": "4.5.4"
