--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"@walletconnect/web3-provider": "^1.7.1",
-		"ipfs-http-client": "^56.0.1",
 		"jest": "^27.5.1",
 		"next": "^12.1.0",
 		"react": "^18.0.0-rc.0",
@@ -22,6 +20,7 @@
 		"zustand": "^3.7.1"
 	},
 	"devDependencies": {
+		"@walletconnect/web3-provider": "^1.7.1",
 		"@babel/core": "^7.16.7",
 		"@craco/craco": "^6.2.0",
 		"@dealmore/craco-plugin-babel-include": "^1.0.0",
@@ -56,6 +55,7 @@
 		"react-icons": "^4.3.1",
 		"styled-system": "^5.1.5",
 		"ts-jest": "^27.1.3",
-		"typescript": "4.5.4"
+		"typescript": "4.5.4",
+		"ipfs-http-client": "^56.0.1"
 	}
 }
