--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
 		"react-icons": "^4.3.1",
 		"styled-system": "^5.1.5",
 		"ts-jest": "^27.1.3",
-		"typescript": "4.5.4",
-		"ipfs-http-client": "^56.0.0"
+		"typescript": "4.5.4"
 	}
 }
