--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev -p 8080",
-		"build": "next build",
+		"build": "next build && next export",
 		"start": "next start -p 8080",
 		"lint": "next lint",
 		"test": "jest"
@@ -20,7 +20,6 @@
 		"zustand": "^3.7.1"
 	},
 	"devDependencies": {
-		"@walletconnect/web3-provider": "^1.7.1",
 		"@babel/core": "^7.16.7",
 		"@craco/craco": "^6.2.0",
 		"@dealmore/craco-plugin-babel-include": "^1.0.0",
@@ -40,6 +39,7 @@
 		"@types/node": "17.0.7",
 		"@types/react": "17.0.38",
 		"@types/styled-system": "^5.1.15",
+		"@walletconnect/web3-provider": "^1.7.1",
 		"axios": "^0.24.0",
 		"chai": "^4.2.0",
 		"dotenv": "^10.0.0",
@@ -49,6 +49,7 @@
 		"ethereum-waffle": "^3.0.0",
 		"ethers": "^5.0.0",
 		"hardhat": "^2.9.1",
+		"ipfs-http-client": "^56.0.1",
 		"next-auth": "^4.2.1",
 		"next-seo": "^4.28.1",
 		"react-cookie": "^4.1.1",
