--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.33.1",
+    "react-markdown": "^8.0.3",
     "react-query": "^3.34.7",
     "react-responsive-carousel": "^3.2.23",
     "regenerator-runtime": "0.13.7",
