--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "11.8.2",
     "@emotion/server": "11.4.0",
     "@emotion/styled": "11.8.1",
+    "@mdx-js/loader": "^2.1.1",
+    "@next/mdx": "^12.1.6",
     "@nrwl/next": "13.9.5",
     "core-js": "^3.6.5",
     "jest": "^27.5.1",
