--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/mdx": "^12.1.6",
     "@nrwl/next": "13.9.5",
     "core-js": "^3.6.5",
+    "gray-matter": "^4.0.3",
     "jest": "^27.5.1",
     "next": "12.1.0",
     "next-mdx-remote": "^4.0.3",
@@ -69,6 +70,7 @@
     "babel-jest": "27.2.3",
     "chai": "^4.2.0",
     "cypress": "^9.1.0",
+    "date-fns": "^2.28.0",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
     "eslint": "8.6.0",
