--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@emotion/server": "11.4.0",
 		"@emotion/styled": "11.8.1",
 		"@mdx-js/loader": "^2.1.1",
+		"@mdx-js/react": "^2.1.1",
 		"@next/mdx": "^12.1.6",
 		"@nrwl/next": "13.9.5",
 		"core-js": "^3.6.5",
