--- a/apps/blog/tsconfig.json
+++ b/apps/blog/tsconfig.json
@@ -18,6 +18,6 @@
 			"@hs-platforms/hs-core-ui": ["../../libs/hs-core-ui/src/index.ts"]
 		}
 	},
-	"include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts", "../../libs/hs-core-ui/src/index.ts"],
+	"include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts", "../../libs/hs-core-ui/src/index.ts", "src/pages/test/index.ㅓㄴ"],
 	"exclude": ["node_modules"]
 }
