--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
 		"@types/react": "17.0.38",
 		"@types/react-dom": "17.0.13",
 		"@types/styled-system": "^5.1.15",
-		"@typescript-eslint/eslint-plugin": "^5.26.0",
-		"@typescript-eslint/parser": "^5.26.0",
+		"@typescript-eslint/eslint-plugin": "5.26.0",
+		"@typescript-eslint/parser": "5.26.0",
 		"@walletconnect/web3-provider": "^1.7.1",
 		"axios": "^0.24.0",
 		"babel-jest": "27.2.3",
