--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
 		"@emotion/styled": "11.8.1",
 		"@mdx-js/loader": "^2.1.1",
 		"@mdx-js/react": "^2.1.1",
-		"@next/mdx": "^12.1.6",
 		"@nrwl/next": "13.9.5",
 		"core-js": "^3.6.5",
 		"gray-matter": "^4.0.3",
@@ -84,6 +83,7 @@
 		"ethereum-waffle": "^3.0.0",
 		"ethers": "^5.0.0",
 		"hardhat": "^2.9.1",
+		"highlight.js": "^11.5.1",
 		"jest": "27.2.3",
 		"next-auth": "^4.2.1",
 		"next-seo": "^4.28.1",
@@ -91,6 +91,7 @@
 		"prettier": "^2.5.1",
 		"react-cookie": "^4.1.1",
 		"react-icons": "^4.3.1",
+		"react-syntax-highlighter": "^15.5.0",
 		"react-test-renderer": "17.0.2",
 		"styled-system": "^5.1.5",
 		"ts-jest": "^27.1.3",
