--- a/package.json
+++ b/package.json
@@ -1,31 +1,100 @@
 {
-  "name": "blog",
-  "version": "0.0.1",
-  "dependencies": {
-    "@nrwl/next": "13.9.5",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "gray-matter": "^4.0.3",
-    "next-mdx-remote": "^4.0.3",
-    "react-query": "^3.34.7",
-    "zustand": "^3.7.1",
-    "react-responsive-carousel": "^3.2.23"
-  },
-  "devDependencies": {
-    "dotenv-webpack": "^7.0.3",
-    "@emotion/styled": "^11.3.0",
-    "@babel/core": "^7.16.7",
-    "@emotion/react": "^11.1.1",
-    "styled-system": "^5.1.5",
-    "axios": "^0.24.0",
-    "react-icons": "^4.3.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "next-seo": "^4.28.1",
-    "dotenv": "^10.0.0",
-    "react-cookie": "^4.1.1"
-  },
-  "scripts": {
-    "start": "next start"
-  }
+	"name": "hs-platforms",
+	"version": "0.0.0",
+	"license": "MIT",
+	"scripts": {
+		"start": "nx serve",
+		"dev": "nx serve --port 8080",
+		"build": "nx build",
+		"test": "nx test"
+	},
+	"private": true,
+	"dependencies": {
+		"@emotion/react": "11.8.2",
+		"@emotion/server": "11.4.0",
+		"@emotion/styled": "11.8.1",
+		"@mdx-js/loader": "^2.1.1",
+		"@mdx-js/react": "^2.1.1",
+		"@nrwl/next": "13.9.5",
+		"core-js": "^3.6.5",
+		"gray-matter": "^4.0.3",
+		"jest": "^27.5.1",
+		"next": "12.1.0",
+		"next-mdx-remote": "^4.0.3",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-intersection-observer": "^8.33.1",
+		"react-query": "^3.34.7",
+		"react-responsive-carousel": "^3.2.23",
+		"regenerator-runtime": "0.13.7",
+		"tslib": "^2.0.0",
+		"web3modal": "^1.9.5",
+		"zustand": "^3.7.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.16.7",
+		"@craco/craco": "^6.2.0",
+		"@dealmore/craco-plugin-babel-include": "^1.0.0",
+		"@emotion/babel-plugin": "^11.7.2",
+		"@emotion/babel-preset-css-prop": "^11.2.0",
+		"@emotion/core": "^11.0.0",
+		"@emotion/css": "^11.1.3",
+		"@emotion/react": "^11.1.1",
+		"@emotion/styled": "^11.3.0",
+		"@loadable/babel-plugin": "^5.13.2",
+		"@loadable/component": "^5.15.0",
+		"@nomiclabs/hardhat-ethers": "^2.0.0",
+		"@nomiclabs/hardhat-waffle": "^2.0.0",
+		"@nrwl/cli": "13.9.5",
+		"@nrwl/cypress": "13.9.5",
+		"@nrwl/eslint-plugin-nx": "13.9.5",
+		"@nrwl/jest": "13.9.5",
+		"@nrwl/linter": "13.9.5",
+		"@nrwl/react": "13.9.5",
+		"@nrwl/web": "13.9.5",
+		"@nrwl/workspace": "13.9.5",
+		"@openzeppelin/contracts": "^4.5.0",
+		"@testing-library/react": "12.1.4",
+		"@testing-library/react-hooks": "7.0.2",
+		"@types/jest": "^27.4.0",
+		"@types/loadable__component": "^5.13.4",
+		"@types/node": "17.0.7",
+		"@types/react": "17.0.38",
+		"@types/react-dom": "17.0.13",
+		"@types/styled-system": "^5.1.15",
+		"@typescript-eslint/eslint-plugin": "5.26.0",
+		"@typescript-eslint/parser": "5.26.0",
+		"@walletconnect/web3-provider": "^1.7.1",
+		"axios": "^0.24.0",
+		"babel-jest": "27.2.3",
+		"chai": "^4.2.0",
+		"cypress": "^9.1.0",
+		"date-fns": "^2.28.0",
+		"dotenv": "^10.0.0",
+		"dotenv-webpack": "^7.0.3",
+		"eslint": "8.6.0",
+		"eslint-config-next": "12.0.7",
+		"eslint-config-prettier": "8.1.0",
+		"eslint-plugin-cypress": "^2.10.3",
+		"eslint-plugin-import": "2.25.4",
+		"eslint-plugin-jsx-a11y": "6.5.1",
+		"eslint-plugin-react": "7.29.3",
+		"eslint-plugin-react-hooks": "4.3.0",
+		"ethereum-waffle": "^3.0.0",
+		"ethers": "^5.0.0",
+		"hardhat": "^2.9.1",
+		"highlight.js": "^11.5.1",
+		"jest": "27.2.3",
+		"next-auth": "^4.2.1",
+		"next-seo": "^4.28.1",
+		"nx": "13.9.5",
+		"prettier": "^2.5.1",
+		"react-cookie": "^4.1.1",
+		"react-icons": "^4.3.1",
+		"react-syntax-highlighter": "^15.5.0",
+		"react-test-renderer": "17.0.2",
+		"styled-system": "^5.1.5",
+		"ts-jest": "^27.1.3",
+		"typescript": "4.5.4"
+	}
 }
